# mujoco_accessories

./: CMakeLists.txt  README.md  dependencies.repos  package.xml
configs/: ridgeback_controllers.yaml  ridgeback_ur5e_controllers.yaml  ur_controllers.yaml
launch/: combined.launch.py  demo_ridgeback.launch.py  demo_ur5e.launch.py  ur5e.launch.py  view_rviz.launch.py
meshes/ur5e/: base_platform.stl
mujoco/combined/: combined_default.xml  ridgeback_globals_combined.xml  ur5e_globals_combined.xml
mujoco/descriptions/: ridgeback.xml  ridgeback_globals.xml
mujoco/descriptions/ridgeback/: ridgeback.xml
mujoco/descriptions/ur5e/: ur5e.xml  ur5e_globals.xml  ur5e_linear_rail.xml
mujoco/environments/: dummy_world.xml
robot/: ridgeback_default.xml  ur5e_default.xml
src/: ridgeback_example.cpp  ridgeback_velocity_publisher.cpp  ur5e_trajectory_publisher.cpp
urdf/: materials.urdf.xacro  ridgeback.urdf.xacro  ridgeback_control.urdf.xacro  ridgeback_ur5e.urdf.xacro  test_diff_drive.xacro.urdf  ur5e.urdf.xacro  ur5e_macro.xacro  ur5e_ros2_control.xacro
